crates/data-dict/tests/snapshots/validate_spec__unknown_top_level_key.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
bogus: 1
────────────────────────────────────────
error: [Q-1-18]
 --> dict.yaml:3:1
  |
3 | bogus: 1
  | ^^^^^ Unknown property 'bogus'
  |
  = help: Check for typos in property names or remove unrecognized properties?
